crates/toml/tests/snapshots/invalid/key/quoted-unclosed-02.stderr
TOML parse error at line 1, column 5
  |
1 | "key
  |     ^
key with no value, expected `=`

---
TOML parse error at line 1, column 5
  |
1 | "key
  |     ^
invalid basic string, expected `"`
